--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "led-matrix-controller",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
-    "start": "npm install && node main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm install && node src/main.js",
+    "test": "npm install && mocha"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
   "homepage": "https://github.com/JamesGennoy/led-matrix-controller#readme",
   "dependencies": {
     "onoff": "^1.1.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0"
   }
 }
